products.svc.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: products
    version: v1
  name: products
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: products
status:
  loadBalancer: {}
