productsdb.svc.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: store
    version: v1
  name: productsdb
spec:
  ports:
  - port: 27017
    name: tcp
    protocol: TCP
    targetPort: 27017
  selector:
    app: store
status:
  loadBalancer: {}
