store-ui.svc.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: store-ui
    version: v1
  name: store-ui
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: store-ui
  type: NodePort
status:
  loadBalancer: {}
